Display does not initially update on switching material mode between Object and Data #66234

Closed
opened 2019-06-29 01:21:48 +02:00 by Gavin Scott · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 74), branch: master (modified), commit date: 2019-06-28 15:47, hash: c9238e638f

Exact steps for others to reproduce the error
New default scene, cube selected.
Switch to Rendered or LookDev mode so we can see the effect of materials in the 3dview.
Switch to Material tab in Properties window.
In the Link drop-down (to the right of the delete material X) select Object.
Click "New" to create a new Material.
Click on Base Color and choose a color and note that the 3dview immediately shows the color.
Now go back to the Link menu and switch to Data.
The display switches to show the original default material.
Click on the Base Color and select a color.
Note that the 3dview does not update as you make changes to this material.
You can switch display modes etc. and it still does not update.
But change to the Modeling workspace and then back to Layout and it will update and from then on it appears to always update.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 74), branch: master (modified), commit date: 2019-06-28 15:47, hash: `c9238e638f` **Exact steps for others to reproduce the error** New default scene, cube selected. Switch to Rendered or LookDev mode so we can see the effect of materials in the 3dview. Switch to Material tab in Properties window. In the Link drop-down (to the right of the delete material X) select Object. Click "New" to create a new Material. Click on Base Color and choose a color and note that the 3dview immediately shows the color. Now go back to the Link menu and switch to Data. The display switches to show the original default material. Click on the Base Color and select a color. Note that the **3dview does not update as you make changes to this material.** You can switch display modes etc. and it still does not update. But change to the Modeling workspace and then back to Layout and it will update and from then on it appears to always update.
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-07-01 11:44:37 +02:00

It also updates if you enter edit mode for example.

It also updates if you enter edit mode for example.

Added subscriber: @Sergey

Added subscriber: @Sergey

This is a nasty use after free issue:

READ of size 1 at 0x6130001319e8 thread T0
    - 0 0x7fb7b38810bd in printf_common /build/gcc/src/gcc/libsanitizer/sanitizer_common/sanitizer_common_interceptors_format.inc:546
    - 1 0x7fb7b3881c3c in __interceptor_vprintf /build/gcc/src/gcc/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:1501
    - 2 0x7fb7b3881d37 in __interceptor_printf /build/gcc/src/gcc/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:1547
    - 3 0x55742a4ae82f in eevee_object_material_get /home/clement/Blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:1531
    - 4 0x55742a4ae82f in EEVEE_materials_cache_populate /home/clement/Blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:1566
    - 5 0x55742a471bdc in EEVEE_cache_populate /home/clement/Blender/blender/source/blender/draw/engines/eevee/eevee_engine.c:123
    - 6 0x55742a3ea01b in drw_engines_cache_populate /home/clement/Blender/blender/source/blender/draw/intern/draw_manager.c:1121
    - 7 0x55742a3ec861 in DRW_draw_render_loop_ex /home/clement/Blender/blender/source/blender/draw/intern/draw_manager.c:1625
    - 8 0x55742a3ebe67 in DRW_draw_view /home/clement/Blender/blender/source/blender/draw/intern/draw_manager.c:1541
    - 9 0x55742b19ec55 in view3d_draw_view /home/clement/Blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1455
    - 10 0x55742b19ed53 in view3d_main_region_draw /home/clement/Blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1479
    - 11 0x55742b3c274b in ED_region_do_draw /home/clement/Blender/blender/source/blender/editors/screen/area.c:567
    - 12 0x557429dd50d0 in wm_draw_window_offscreen /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_draw.c:616
    - 13 0x557429dd5bf3 in wm_draw_window /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_draw.c:752
    - 14 0x557429dd67dd in wm_draw_update /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_draw.c:934
    - 15 0x557429dcb402 in WM_main /home/clement/Blender/blender/source/blender/windowmanager/intern/wm.c:423
    - 16 0x557428cf5c05 in main /home/clement/Blender/blender/source/creator/creator.c:500
    - 17 0x7fb7b0cbcce2 in __libc_start_main (/usr/lib/libc.so.6+0x23ce2)
    #18 0x557428cf514d in _start (/home/clement/Blender/build_linux/bin/blender+0x23cb14d)

0x6130001319e8 is located 40 bytes inside of 328-byte region [0x6130001319c0,0x613000131b08)
freed by thread T0 here:
    - 0 0x7fb7b391df89 in __interceptor_free /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:66
    - 1 0x5574297b23e2 in MEM_lockfree_freeN /home/clement/Blender/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:157
    - 2 0x557429677a8a in free_copy_on_write_datablock /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:126
    - 3 0x55742951ec31 in ghash_free_cb /home/clement/Blender/blender/source/blender/blenlib/intern/BLI_ghash.c:652
    - 4 0x55742952242b in BLI_ghash_free /home/clement/Blender/blender/source/blender/blenlib/intern/BLI_ghash.c:1025
    - 5 0x557429677cd7 in DEG::DepsgraphNodeBuilder::~DepsgraphNodeBuilder() /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:154
    - 6 0x55742965878d in DEG_graph_build_from_view_layer /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:268
    - 7 0x5574296594ee in DEG_graph_relations_update /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:377
    - 8 0x5574291ead3e in scene_graph_update_tagged /home/clement/Blender/blender/source/blender/blenkernel/intern/scene.c:1557
    - 9 0x5574291eadff in BKE_scene_graph_update_tagged /home/clement/Blender/blender/source/blender/blenkernel/intern/scene.c:1582
    - 10 0x557429dd8dd9 in wm_event_do_depsgraph /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:369
    - 11 0x557429dd9027 in wm_event_do_refresh_wm_and_depsgraph /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:395
    - 12 0x557429dda0c6 in wm_event_do_notifiers /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:560
    - 13 0x557429dcb3f6 in WM_main /home/clement/Blender/blender/source/blender/windowmanager/intern/wm.c:420
    - 14 0x557428cf5c05 in main /home/clement/Blender/blender/source/creator/creator.c:500
    - 15 0x7fb7b0cbcce2 in __libc_start_main (/usr/lib/libc.so.6+0x23ce2)

previously allocated by thread T0 here:
    - 0 0x7fb7b391e5a1 in __interceptor_calloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:95
    - 1 0x5574297b2867 in MEM_lockfree_callocN /home/clement/Blender/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:267
    - 2 0x557428f90e75 in BKE_libblock_alloc_notest /home/clement/Blender/blender/source/blender/blenkernel/intern/library.c:1197
    - 3 0x5574296f89dc in DEG::IDNode::init_copy_on_write(ID*) /home/clement/Blender/blender/source/blender/depsgraph/intern/node/deg_node_id.cc:139
    - 4 0x55742964e623 in DEG::Depsgraph::add_id_node(ID*, ID*) /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph.cc:128
    - 5 0x5574296780d0 in DEG::DepsgraphNodeBuilder::add_id_node(ID*) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:174
    - 6 0x5574296834f6 in DEG::DepsgraphNodeBuilder::build_material(Material*) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1423
    - 7 0x5574296816d3 in DEG::DepsgraphNodeBuilder::build_object_data_geometry(Object*, bool) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1202
    - 8 0x55742967c000 in DEG::DepsgraphNodeBuilder::build_object_data(Object*, bool) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:670
    - 9 0x55742967b5b6 in DEG::DepsgraphNodeBuilder::build_object(int, Object*, DEG::eDepsNode_LinkedState_Type, bool) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:597
    - 10 0x5574296a79de in DEG::DepsgraphNodeBuilder::build_view_layer(Scene*, ViewLayer*, DEG::eDepsNode_LinkedState_Type) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes_view_layer.cc:107
    - 11 0x557429658676 in DEG_graph_build_from_view_layer /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:270
    - 12 0x5574296594ee in DEG_graph_relations_update /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:377
    - 13 0x557429dd8d93 in wm_event_do_depsgraph /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:365
    - 14 0x557429dfc310 in wm_file_read_post /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_files.c:560
    - 15 0x557429dfe335 in wm_homefile_read /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_files.c:1071
    - 16 0x557429e18c8f in WM_init /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_init_exit.c:289
    - 17 0x557428cf5a6d in main /home/clement/Blender/blender/source/creator/creator.c:423
    #18 0x7fb7b0cbcce2 in __libc_start_main (/usr/lib/libc.so.6+0x23ce2)

I think me->mat returned by give_matarar() is not updated correctly during copy on write or something like that. @sergey any idea?

This is a nasty use after free issue: ```==65082==ERROR: AddressSanitizer: heap-use-after-free on address 0x6130001319e8 at pc 0x7fb7b38810be bp 0x7ffed6e68c60 sp 0x7ffed6e683d8 READ of size 1 at 0x6130001319e8 thread T0 - 0 0x7fb7b38810bd in printf_common /build/gcc/src/gcc/libsanitizer/sanitizer_common/sanitizer_common_interceptors_format.inc:546 - 1 0x7fb7b3881c3c in __interceptor_vprintf /build/gcc/src/gcc/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:1501 - 2 0x7fb7b3881d37 in __interceptor_printf /build/gcc/src/gcc/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:1547 - 3 0x55742a4ae82f in eevee_object_material_get /home/clement/Blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:1531 - 4 0x55742a4ae82f in EEVEE_materials_cache_populate /home/clement/Blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:1566 - 5 0x55742a471bdc in EEVEE_cache_populate /home/clement/Blender/blender/source/blender/draw/engines/eevee/eevee_engine.c:123 - 6 0x55742a3ea01b in drw_engines_cache_populate /home/clement/Blender/blender/source/blender/draw/intern/draw_manager.c:1121 - 7 0x55742a3ec861 in DRW_draw_render_loop_ex /home/clement/Blender/blender/source/blender/draw/intern/draw_manager.c:1625 - 8 0x55742a3ebe67 in DRW_draw_view /home/clement/Blender/blender/source/blender/draw/intern/draw_manager.c:1541 - 9 0x55742b19ec55 in view3d_draw_view /home/clement/Blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1455 - 10 0x55742b19ed53 in view3d_main_region_draw /home/clement/Blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1479 - 11 0x55742b3c274b in ED_region_do_draw /home/clement/Blender/blender/source/blender/editors/screen/area.c:567 - 12 0x557429dd50d0 in wm_draw_window_offscreen /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_draw.c:616 - 13 0x557429dd5bf3 in wm_draw_window /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_draw.c:752 - 14 0x557429dd67dd in wm_draw_update /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_draw.c:934 - 15 0x557429dcb402 in WM_main /home/clement/Blender/blender/source/blender/windowmanager/intern/wm.c:423 - 16 0x557428cf5c05 in main /home/clement/Blender/blender/source/creator/creator.c:500 - 17 0x7fb7b0cbcce2 in __libc_start_main (/usr/lib/libc.so.6+0x23ce2) #18 0x557428cf514d in _start (/home/clement/Blender/build_linux/bin/blender+0x23cb14d) 0x6130001319e8 is located 40 bytes inside of 328-byte region [0x6130001319c0,0x613000131b08) freed by thread T0 here: - 0 0x7fb7b391df89 in __interceptor_free /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:66 - 1 0x5574297b23e2 in MEM_lockfree_freeN /home/clement/Blender/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:157 - 2 0x557429677a8a in free_copy_on_write_datablock /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:126 - 3 0x55742951ec31 in ghash_free_cb /home/clement/Blender/blender/source/blender/blenlib/intern/BLI_ghash.c:652 - 4 0x55742952242b in BLI_ghash_free /home/clement/Blender/blender/source/blender/blenlib/intern/BLI_ghash.c:1025 - 5 0x557429677cd7 in DEG::DepsgraphNodeBuilder::~DepsgraphNodeBuilder() /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:154 - 6 0x55742965878d in DEG_graph_build_from_view_layer /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:268 - 7 0x5574296594ee in DEG_graph_relations_update /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:377 - 8 0x5574291ead3e in scene_graph_update_tagged /home/clement/Blender/blender/source/blender/blenkernel/intern/scene.c:1557 - 9 0x5574291eadff in BKE_scene_graph_update_tagged /home/clement/Blender/blender/source/blender/blenkernel/intern/scene.c:1582 - 10 0x557429dd8dd9 in wm_event_do_depsgraph /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:369 - 11 0x557429dd9027 in wm_event_do_refresh_wm_and_depsgraph /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:395 - 12 0x557429dda0c6 in wm_event_do_notifiers /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:560 - 13 0x557429dcb3f6 in WM_main /home/clement/Blender/blender/source/blender/windowmanager/intern/wm.c:420 - 14 0x557428cf5c05 in main /home/clement/Blender/blender/source/creator/creator.c:500 - 15 0x7fb7b0cbcce2 in __libc_start_main (/usr/lib/libc.so.6+0x23ce2) previously allocated by thread T0 here: - 0 0x7fb7b391e5a1 in __interceptor_calloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:95 - 1 0x5574297b2867 in MEM_lockfree_callocN /home/clement/Blender/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:267 - 2 0x557428f90e75 in BKE_libblock_alloc_notest /home/clement/Blender/blender/source/blender/blenkernel/intern/library.c:1197 - 3 0x5574296f89dc in DEG::IDNode::init_copy_on_write(ID*) /home/clement/Blender/blender/source/blender/depsgraph/intern/node/deg_node_id.cc:139 - 4 0x55742964e623 in DEG::Depsgraph::add_id_node(ID*, ID*) /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph.cc:128 - 5 0x5574296780d0 in DEG::DepsgraphNodeBuilder::add_id_node(ID*) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:174 - 6 0x5574296834f6 in DEG::DepsgraphNodeBuilder::build_material(Material*) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1423 - 7 0x5574296816d3 in DEG::DepsgraphNodeBuilder::build_object_data_geometry(Object*, bool) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1202 - 8 0x55742967c000 in DEG::DepsgraphNodeBuilder::build_object_data(Object*, bool) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:670 - 9 0x55742967b5b6 in DEG::DepsgraphNodeBuilder::build_object(int, Object*, DEG::eDepsNode_LinkedState_Type, bool) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:597 - 10 0x5574296a79de in DEG::DepsgraphNodeBuilder::build_view_layer(Scene*, ViewLayer*, DEG::eDepsNode_LinkedState_Type) /home/clement/Blender/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes_view_layer.cc:107 - 11 0x557429658676 in DEG_graph_build_from_view_layer /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:270 - 12 0x5574296594ee in DEG_graph_relations_update /home/clement/Blender/blender/source/blender/depsgraph/intern/depsgraph_build.cc:377 - 13 0x557429dd8d93 in wm_event_do_depsgraph /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_event_system.c:365 - 14 0x557429dfc310 in wm_file_read_post /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_files.c:560 - 15 0x557429dfe335 in wm_homefile_read /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_files.c:1071 - 16 0x557429e18c8f in WM_init /home/clement/Blender/blender/source/blender/windowmanager/intern/wm_init_exit.c:289 - 17 0x557428cf5a6d in main /home/clement/Blender/blender/source/creator/creator.c:423 #18 0x7fb7b0cbcce2 in __libc_start_main (/usr/lib/libc.so.6+0x23ce2) ``` I think `me->mat` returned by `give_matarar()` is not updated correctly during copy on write or something like that. @sergey any idea?
Clément Foucault was unassigned by Sergey Sharybin 2019-07-02 17:48:30 +02:00
Sergey Sharybin self-assigned this 2019-07-02 17:48:30 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 21668359b7

This issue was referenced by 21668359b79bd4a44a1f34e479a7bd8072ecdc69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66234
No description provided.